--- a/src/dat/gui/style.scss
+++ b/src/dat/gui/style.scss
@@ -112,6 +112,16 @@ $input-color: lighten($background-color, 8.5%);
 
       }
 
+      .midiMessageIndicator {
+        margin-left: 5px;
+        margin-right: 5px;
+        user-select: none;
+
+        &.received {
+          color: green;
+        }
+      }
+
     }
 
     &.folder {
