--- a/src/dat/gui/style.scss
+++ b/src/dat/gui/style.scss
@@ -234,3 +234,9 @@ $input-color: lighten($background-color, 8.5%);
   }
 
 }
+
+#dg-midi-help {
+  div:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
