--- a/src/dat/gui/style.scss
+++ b/src/dat/gui/style.scss
@@ -239,4 +239,8 @@ $input-color: lighten($background-color, 8.5%);
   div:not(:last-child) {
     margin-bottom: 10px;
   }
+
+  a {
+    color: white;
+  }
 }
